cluster/apps/mediaserver/overseerr/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: overseerr
  namespace: mediaserver
spec:
  hosts:
  - requests.mcf.io
  gateways:
  - istio-ingress/overseerr-gateway
  http:
  - route:
    - destination:
        port:
          number: 5055
        host: overseerr.mediaserver.svc.cluster.local
